--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - docker build -t nikash19/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run nikash19/react-test npm test -- --coverage
+  - docker run -e CI=true nikash19/react-test npm test 
 
 after_success:
   - docker build -t nikash19/multi-client ./client
