--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ deploy:
   provider: elasticbeanstalk
   region: "eu-central-1"
   app: "multi-docker"
-  env: "MultiDocker-env"
+  env: "MultiDocker-env-1"
   bucket_name: "elasticbeanstalk-eu-central-1-631831302920"
   bucket_path: "docker-multi"
   on:
